--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
 <div class="container p-3 mb-2">
     <div class="row">
         <!-- Blog Entries Column -->
-        <div class="col-md-8 mt-3 left">
+        <div class="col-md-10 mt-3 mx-auto">
             {% for blog in blog_list %}
             <div class="card mb-4">
                 <div class="card-body bg-dark text-white">
