--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,7 @@
             font-family: 'Inconsolata', monospace;
             font-size: 17px;
             background-color: #2d2d2e;
+            min-width:90%;
         }
         .shadow {
             box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.1);
@@ -42,8 +43,18 @@
             padding-top: 10px;
         }
         .logo{
-		height: 30px;
-		width: 96px;
+			height: 30px;
+			width: 96px;
+		}
+		#center {
+			width: 30%;
+			height: 50%;
+			position: absolute;
+			top:0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			margin: auto;
 		}
 </style>
 
