--- a/templates/editor.html
+++ b/templates/editor.html
@@ -15,6 +15,7 @@
     {% csrf_token %}
     {{form.media}}
     {{form.as_p }}
+    <p> (Slug is used in the url of your blog. Generally, a short form of the title is used as a slug.) </p>
     <button class="btn btn-secondary">Submit</button>
   </form>
 </div>
