--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white shadow" id="mainNav">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="{% static 'images/logo_large.png' %}" alt=""></a>
+		<a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="{% static '/images/logo_large.png' %}" alt=""></a>
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
 				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
