--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<title>Snippets</title>
-	<link rel = "icon" href="{% static '/images/logo_short.png' %}" type = "image/x-icon">
+	<link rel = "icon" href="{% static 'images/logo_short.png' %}" type = "image/x-icon">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -61,7 +61,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white shadow" id="mainNav">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="{% static '/images/logo_large.png' %}" alt=""></a>
+		<a class="navbar-brand" href="{% url 'home' %}"><img class="logo" src="{% static 'images/logo_large.png' %}" alt=""></a>
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
 				aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
