--- a/templates/about.html
+++ b/templates/about.html
@@ -1,11 +1,18 @@
 {% extends 'index.html' %} {% block content %}
 
-<div id="center" class="text-white">
-    <h1> About Snippets </h1>
-    <p></p>
-    <p> Developed by edusanketdk, Snippets was inspired from Dan Bader's email newsletters.</p>
-    <p> Here you can share tech-stuff, codes, coding tricks and much more. </p>
-    <p> Its like a one stop solution to revealing the educator inside you. </p>
-    <p> So, start writing bitch!</p>
+<div class="jumbotron vertical-center text-white">
+<div class="container p-3 mb-2">
+    <div class="row ">
+        <div class="col-md-10 mt-3 mx-auto">
+            <h1> About Snippets </h1>
+            <p></p>
+            <p> Developed by edusanketdk, Snippets was inspired from Dan Bader's email newsletters.</p>
+            <p> Here you can share tech-stuff, codes, coding tricks and much more. </p>
+            <p> Its like a one stop solution to revealing the educator inside you. </p>
+            <p> So, start writing!</p>
+        </div>
+    </div>
 </div>
+</div>
+
 {% endblock content %}
