--- a/templates/index.html
+++ b/templates/index.html
@@ -46,16 +46,14 @@
 			height: 30px;
 			width: 96px;
 		}
-		#center {
-			width: 30%;
-			height: 50%;
-			position: absolute;
-			top:0;
-			bottom: 0;
-			left: 0;
-			right: 0;
-			margin: auto;
-		}
+
+		.vertical-center {
+			  min-height: 100%;
+			  min-width: 100%;
+			  display: flex;
+			  align-items: center;
+			  background-color: #2d2d2e;
+}
 </style>
 
 <!-- Navigation -->
@@ -73,9 +71,6 @@
 				</li>
 				<li class="nav-item text-white">
 					<a class="nav-link text-white font-weight-bold" href="/about.html">About</a>
-				</li>
-				<li class="nav-item text-white">
-					<a class="nav-link text-white font-weight-bold" href="/contact.html">Contact</a>
 				</li>
 			</ul>
 		</div>
