--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,8 +2,8 @@
 
 <div class="container">
   <div class="row">
-    <div class=" mt-3 left top bg-dark text-white">
-      <div class="card-body">
+    <div class=" mt-3 left top">
+      <div class="card-body bg-dark text-white border border-white">
         <h1>{% block title %} {{ object.title }} {% endblock title %}</h1>
         <p class=" text-muted">{{ blog.author }} | {{ blog.created_on }}</p>
         <p class="card-text ">{{ object.content | safe }}</p>
