--- a/templates/editor.html
+++ b/templates/editor.html
@@ -1,23 +1,19 @@
 {% extends 'index.html' %} {% block content %}
-<style>
-  #custom{
-      position: fixed;
-      top: 15%;
-      left: 20%;
-      margin-top: -50px;
-      margin-left: -150px;
-    }
-</style>
-<div id="custom" class = "text-white"><h1> Add post </h1>
-<br>
-<div class = "form-group text-white">
-  <form method = "POST">
-    {% csrf_token %}
-    {{form.media}}
-    {{form.as_p }}
-    <p> (Slug is used in the url of your blog. Generally, a short form of the title is used as a slug.) </p>
-    <button class="btn btn-secondary">Submit</button>
-  </form>
+
+<div class="container p-3 mb-2">
+  <div class="row">
+    <div class="col-md-10 mt-3 mx-auto">
+      <div class = "form-group text-white">
+        <form method = "POST">
+          {% csrf_token %}
+          {{form.media}}
+          {{form.as_p }}
+          <p> (Slug is used in the url of your blog. Generally, a short form of the title is used as a slug.) </p>
+          <button class="btn btn-secondary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
-</div>
+
 {% endblock content %}
