--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+	<meta name="google-site-verification" content="8OhKG21ME-jTyJbXHlAF-ms2dXZHg1DxjJu3l_1RBtg" />
 
 
 </head>
